# Quikav_Openwrt

./: AUTHORS  BUGS  COPYING.YARA  COPYING.bzip2  COPYING.file  COPYING.llvm  COPYING.lzma  COPYING.regex  COPYING.unrar  ChangeLog  FAQ  Makefile  Makefile.am  Makefile.in  NEWS  README  UPGRADE  config.status  configure  configure.ac  libquikav.pc  libquikav.pc.in  libtool  platform.h  quikav-config  quikav-config.h  quikav-config.h.in  quikav-config.in  stamp-h1  target.h
database/: Makefile
docs/: Makefile  Makefile.am  Makefile.in  quik.eps
docs/html/: WARNINGS  demon  footnode.html  index.html  node1.html  node10.html  node11.html  node12.html  node13.html  node14.html  node15.html  node16.html  node17.html  node18.html  node19.html  node2.html  node20.html  node21.html  node22.html  node23.html  node24.html  node25.html  node26.html  node27.html  node28.html  node29.html  node3.html  node30.html  node31.html  node32.html  node33.html  node34.html  node35.html  node36.html  node37.html  node38.html  node39.html  node4.html  node40.html  node41.html  (+32 more)
docs/man/: freshquik.1  freshquik.conf.5  quikav-milter.8  quikav-milter.conf.5  quikbc.1  quikconf.1  quikd.8  quikd.conf.5  quikdscan.1  quikdtop.1  quikscan.1  quiksubmit.1  sigtool.1
etc/: Makefile  Makefile.am  Makefile.in  freshquik.conf.sample  quikav-milter.conf.sample  quikd.conf.sample
examples/: ex1.c
freshquik/: Makefile  Makefile.am  Makefile.in  dns.c  dns.h  execute.c  freshquik  freshquik.c  freshquikcodes.h  manager.c  manager.h  mirman.c  mirman.h  nonblock.c  nonblock.h  notify.c  notify.h  quikav-freshquik.service  quikav-freshquik.service.in
freshquik/.deps/: cdiff.Po  dns.Po  execute.Po  freshquik.Po  manager.Po  mirman.Po  nonblock.Po  notify.Po  optparser.Po  output.Po  quikdcom.Po
freshquik/.libs/: freshquik
libfreshquik/: Makefile  Makefile.am  Makefile.in  libfreshquik.c  libfreshquik.h
libltdl/: Makefile  Makefile.in  libltdlc.la
libltdl/.deps/: dlopen.Plo  libltdlc_la-lt__alloc.Plo  libltdlc_la-lt_dlloader.Plo  libltdlc_la-lt_error.Plo  libltdlc_la-ltdl.Plo  libltdlc_la-preopen.Plo  libltdlc_la-slist.Plo  lt__strl.Plo
libquikav/: 7z_iface.c  7z_iface.h  Makefile  Makefile.am  Makefile.in  adc.c  adc.h  apm.c  apm.h  arc4.c  arc4.h  asn1.c  asn1.h  aspack.c  aspack.h  autoit.c  autoit.h  bcfeatures.h  bignum_fast.h  binhex.c  binhex.h  blob.c  blob.h  builtin_bytecodes.h  bytecode.c  bytecode.h  bytecode_api.c  bytecode_api.h  bytecode_api_decl.c  bytecode_api_impl.h  bytecode_detect.c  bytecode_detect.h  bytecode_hooks.h  bytecode_nojit.c  bytecode_priv.h  bytecode_vm.c  cab.c  cab.h  cache.c  cache.h  (+496 more)
libquikav/.deps/: libquikav_internal_utils_la-conv.Plo  libquikav_internal_utils_la-crypto.Plo  libquikav_internal_utils_la-iowrap.Plo  libquikav_internal_utils_la-others_common.Plo  libquikav_internal_utils_la-qsort.Plo  libquikav_internal_utils_la-regcomp.Plo  libquikav_internal_utils_la-regerror.Plo  libquikav_internal_utils_la-regexec.Plo  libquikav_internal_utils_la-regfree.Plo  libquikav_internal_utils_la-str.Plo  libquikav_internal_utils_la-strlcat.Plo  libquikav_internal_utils_la-strlcpy.Plo  libquikav_internal_utils_nothreads_la-conv.Plo  libquikav_internal_utils_nothreads_la-crypto.Plo  libquikav_internal_utils_nothreads_la-iowrap.Plo  libquikav_internal_utils_nothreads_la-others_common.Plo  libquikav_internal_utils_nothreads_la-qsort.Plo  libquikav_internal_utils_nothreads_la-regcomp.Plo  libquikav_internal_utils_nothreads_la-regerror.Plo  libquikav_internal_utils_nothreads_la-regexec.Plo  libquikav_internal_utils_nothreads_la-regfree.Plo  libquikav_internal_utils_nothreads_la-str.Plo  libquikav_la-7zAlloc.Plo  (+244 more)
libquikunrar/: libquikunrar.map  unrar.c  unrar.h  unrar15.c  unrar20.c  unrarcmd.c  unrarcmd.h  unrarfilter.c  unrarhlp.c  unrarhlp.h  unrarppm.c  unrarvm.c  unrarvm.h
libquikunrar_iface/: Makefile.am  Makefile.in  libquikunrar_iface.map  unrar_iface.c  unrar_iface.h
quikav-milter/: Makefile  Makefile.am  Makefile.in  connpool.c  connpool.h  netcode.c  netcode.h  quikav-milter.c  quikfi.c  quikfi.h  whitelist.c  whitelist.h
quikbc/: Makefile  Makefile.am  Makefile.in  bcrun.c  quikbc
quikconf/: Makefile  Makefile.am  Makefile.in  quikconf  quikconf.c
quikd/: Makefile  Makefile.am  Makefile.in  cscope.out  localserver.c  localserver.h  onaccess_ddd.c  onaccess_ddd.h  onaccess_fan.c  onaccess_fan.h  onaccess_hash.c  onaccess_hash.h  onaccess_scth.c  onaccess_scth.h  others.c  others.h  quikav-daemon.service  quikav-daemon.service.in  quikav-daemon.socket  quikav-daemon.socket.in  quikd  quikd.c  scanner.c  scanner.h  server-th.c  server.h  session.c  session.h  shared.h  tcpserver.c  tcpserver.h  thrmgr.c  thrmgr.h
quikdscan/: Makefile  Makefile.am  Makefile.in  client.c  client.h  proto.c  proto.h  quikdscan  quikdscan.c
quikdtop/: Makefile  Makefile.am  Makefile.in  quikdtop  quikdtop.c
quikdtop/.deps/: optparser.Po  quikdtop.Po
quikscan/: Makefile  Makefile.am  Makefile.in  global.h  manager.c  manager.h  quikscan  quikscan.c
quiksubmit/: Makefile  Makefile.am  Makefile.in  quiksubmit.c
shared/: Makefile.am  Makefile.in  actions.c  actions.h  cdiff.c  cdiff.h  fdpassing.h  getopt.c  misc.c  misc.h  optparser.c  optparser.h  output.c  output.h  queue.h  quikdcom.c  quikdcom.h  tar.c  tar.h
sigtool/: Makefile  Makefile.am  Makefile.in  sigtool  sigtool.c  vba.c  vba.h
test/: Makefile  Makefile.am  Makefile.in  README
unit_tests/: Makefile  Makefile.am  Makefile.in  check1_quikscan.sh  check2_quikd.sh  check3_quikd.sh  check4_quikd.sh  check5_quikd_vg.sh  check6_quikd_vg.sh  check7_quikd_hg.sh  check8_quikd_hg.sh  check9_quikscan_vg.sh  check_bytecode.c  check_common.sh  check_disasm.c  check_fpu_endian.c  check_freshquik.sh  check_htmlnorm.c  check_jsnorm.c  check_matchers.c  check_quikav.c  check_quikav_skip.c  check_quikd.c  check_regex.c  check_str.c  check_uniq.c  check_unit_vg.sh  virusaction-test.sh
win32/: README  configure.js  libquikav.def  libquikunrar.def  libquikunrar_iface.def  platform.h  quikav-config.h
(+448 files in other folders)
