#
#  Copyright (C) 2002 - 2005 Tomasz Kojm <tkojm@quikav.net>
#
#  This program is free software; you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation; either version 2 of the License, or
#  (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
#  MA 02110-1301, USA.

EXTRA_DIST = html $(top_srcdir)/docs/man/*.in quikdoc.pdf quikdoc.tex phishsigs_howto.tex phishsigs_howto.pdf signatures.pdf signatures.tex quik.eps
man_MANS = man/quikscan.1 man/freshquik.1 man/sigtool.1 man/quikd.8 man/quikd.conf.5 man/quikdscan.1 man/quikav-milter.8 man/quikav-milter.conf.5 man/freshquik.conf.5 man/quikconf.1 man/quikdtop.1 man/quikbc.1

if ENABLE_QUIKSUBMIT
man_MANS += man/quiksubmit.1
endif
